@@ -18,6 +18,7 @@ Project Leader / Developer:
 - Jason Kirtland
 - Ali Afshar
 - Christopher Grebs <cg@webshox.org>
+- Sean Cazzell <seancazzell@gmail.com>
 
 Contributors of code for werkzeug/examples are:
 
